# tinydb

./: Cargo.toml  history.txt
src/: catalog.rs  db.rs  executor.rs  lib.rs  main.rs  parser.rs  storage.rs  types.rs
src/binder/: mod.rs
src/binder/statement/: create.rs  mod.rs  select.rs
src/catalog/: column.rs  database.rs  mod.rs  root.rs  schema.rs  table.rs
src/sql/parser/: mod.rs
src/sql/types/: mod.rs
src/storage/: error.rs
