[package]
name = "tinydb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "tinydb"
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow = "1.0"
thiserror = "1.0"
bincode = "~1.3.3"
serde = { version = "1", features = ["derive"] }
bitvec = "1"
sqlparser = "0.37.0"